# revenue-copilot

./: .env.example  .gitignore  DEPLOY.md  README.md  dev.db  docker-compose.yml  package-lock.json  package.json  render.yaml  start-dev.ps1
apps/engine/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/engine/app/: config.py  demo.py  main.py
apps/engine/app/agents/: __init__.py  commercial_agent.py  objection_handler.py  router.py
apps/engine/app/integrations/: google_calendar.py  whatsapp_client.py  whatsapp_window.py
apps/engine/app/knowledge/: __init__.py  retriever.py
apps/engine/app/scheduler/: __init__.py  sequence_scheduler.py
apps/engine/app/scoring/: __init__.py  lead_scorer.py  router.py  state_machine.py
apps/engine/tests/: conftest.py
apps/engine/tests/pbt/: test_agent_properties.py  test_calendar_properties.py  test_lead_score_properties.py  test_sequence_properties.py  test_state_transition_properties.py  test_whatsapp_window_properties.py
apps/engine/tests/unit/: test_lead_scorer.py
apps/web/: .env.example  .eslintrc.json  Dockerfile  middleware.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: chat-widget.tsx
apps/web/lib/: encryption.test.ts  encryption.ts  prisma-middleware.test.ts  prisma-middleware.ts  prisma.ts  rate-limit.test.ts  rate-limit.ts  tenant-context.test.ts  tenant-context.ts
apps/web/middleware/: rate-limit.test.ts  (+1 more)
landing/: index.html
prisma/: schema.dev.prisma  schema.prisma
prisma/migrations/: rls_policies.sql
(+46 files in other folders)
